# qa-app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
app/routes/: events.py  export.py  pages.py  questions.py  rooms.py  upvotes.py
app/services/: csv_export.py  email.py  pubsub.py  questions.py  ratelimit.py  rooms.py
app/utils/: codes.py  ids.py  qr.py
docs/: DEMO_VIDEO_SCRIPT.md  LESSONS.md  SLACK_ANNOUNCEMENT.md
docs/superpowers/plans/: 2026-05-08-qa-app-implementation.md
docs/superpowers/specs/: 2026-05-07-qa-app-design.md
scripts/: capture_screenshots.py
static/css/: animations.css  base.css  tokens.css
static/js/: avatar.js  modal.js  shortcuts.js  sse.js  toast.js  upvote.js
templates/: audience.html  base.html  fullscreen_qr.html  home.html  presenter.html  presenter_share.html  room_ended.html
templates/email/: session_ended.html
templates/partials/: question_card.html
tests/: conftest.py
tests/e2e/: conftest.py  test_audience_flow.py  test_create_room.py  test_presenter_flow.py
tests/integration/: test_audience_view.py  test_email_on_close.py  test_export_endpoint.py  test_healthz.py  test_pages.py  test_presenter_view.py  test_questions.py  test_room_expiry.py  test_room_lifecycle.py  test_sse.py  test_upvotes.py
tests/unit/: test_auth.py  test_codes.py  test_csv_export.py  test_email.py  test_models.py  test_pubsub.py  test_ratelimit.py  test_schemas.py  test_state_transitions.py
