[project]
name = "qa-app"
version = "0.1.0"
description = "Live Q&A app for presenters — DeepLearning.AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "sqlalchemy>=2.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "itsdangerous>=2.2",
  "qrcode[pil]>=8.0",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "structlog>=24.4",
  "email-validator>=2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "playwright>=1.48",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
